; ModuleID = '/home/carl/AnghaBench/reactos/base/shell/cmd/extr_console.c_SetCursorType.c'
source_filename = "/home/carl/AnghaBench/reactos/base/shell/cmd/extr_console.c_SetCursorType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@STD_OUTPUT_HANDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SetCursorType(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_3__, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  %9 = zext i1 %8 to i64
  %10 = select i1 %8, i32 10, i32 99
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  store i32 %10, i32* %11, align 8
  %12 = load i64, i64* %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  store i64 %12, i64* %13, align 8
  %14 = load i32, i32* @STD_OUTPUT_HANDLE, align 4
  %15 = call i32 @GetStdHandle(i32 %14)
  %16 = call i32 @SetConsoleCursorInfo(i32 %15, %struct.TYPE_3__* %6)
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @SetConsoleCursorInfo(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @GetStdHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
